Added max channel value to brushservice

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,5 +1,5 @@
 <!-- Show table and graph only if a file has been uploaded -->
-<div *ngIf="inputError" class="alert alert-danger">Maximum input value is {{maxInputValue}}!</div>
+<div *ngIf="inputError" class="alert alert-danger">Maximum input value is {{maxChannelValue}}!</div>
 
 <div *ngIf="brushes.length>0"> 
   <div id="tableContainer">
