--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -92,7 +92,7 @@
             <a class="nav-link d-lg-none" href="#">  <!-- Navbar collapsed: Text only --> 
                 <span (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
             </a>
-            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" title="Show/hide settings menu"> <!-- Navbar expandes: Icon and text --> 
+            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" title="Show/hide brush editor settings menu"> <!-- Navbar expandes: Icon and text --> 
                 <i class="fas fa-cog fa-2x navbar-icons text-center d-block" (click)="toggleSettings()"></i>
                 <span class="h6 text-muted mt-1 mb-0 d-block">Settings</span>
             </a>
