--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,11 +1,22 @@
-<div class="alert alert-secondary fade show mb-1 mt-1" role="alert" *ngIf="showSettings">
+<div class="alert alert-secondary fade show mb-1 mt-1" role="alert"> <!-- *ngIf="showSettings" -->
     <button type="button" class="close mb-3" aria-label="Close" (click)="toggleSettings()">
         <span aria-hidden="true">&times;</span>
     </button>
     <div class="mb-1 mr-1 d-md-inline-block d-block">
-        <button class="btn btn-secondary " type="button" aria-haspopup="true" (click)="resetChannelNames()" title="Reset channel names to default: Channel 1, Channel 2...">
-            Reset channel names
-        </button>
+        
+        <form>
+            <div class="form-group">
+                <label for="maxChannelvalue">Max channel value</label>
+                <input type="number" class="form-control" id="maxChannelvalue" aria-describedby="maxChannelValue" placeholder=0>
+            </div>
+            <button type="button" class="btn btn-primary" (click)="updateSettings()" title="Update brush editor settings">
+                Update settings
+            </button>
+            <button type="button" class="btn btn-secondary ml-1" (click)="resetSettings()" 
+                title="Reset all settings to default (channel names, max channel value etc... )">
+                Reset all
+            </button>
+        </form>
     </div>
 
     <!-- Brush table settings. Uncomment and add logic to implement
