Added info componenent + other minor changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,13 @@
 </div>
 
 <div class="container-fluid"> 
+  <!-- Info messages -->
+  <div class="row mt-3">
+    <div class="col-12">
+      <app-info-msg id="app-info"></app-info-msg>
+    </div>
+  </div>
+
   <!-- Settings -->
   <div class="row mt-3">
     <div class="col-12">
