--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,7 +1,4 @@
-<!-- Show table and graph only if a file has been uploaded -->
-<div *ngIf="inputError" class="alert alert-danger">Maximum input value is {{maxChannelValue}}!</div>
-
-<div *ngIf="brushes.length>0"> 
+<div *ngIf="brushes.length>0"> <!-- Show table and graph only if a file has been uploaded -->
   <div id="tableContainer">
     <h3>Data</h3>
   <div>
