--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,10 +10,10 @@
         <!-- File upload/download setting large screen-->
         <li class="nav-item d-none d-lg-block ml-2" > 
             <div>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" *ngIf="brushes.length>0" title="Export file to robot"> <!-- Hidden when no brushfile is choosed -->
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" *ngIf="brushes.length>0" mat-raised-button matTooltip="Export file to robot" matTooltipShowDelay="1000"> <!-- Hidden when no brushfile is choosed -->
                     <i class="fas fa-file-download fa-2x navbar-icons"></i>
                 </a>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" title="Choose file from a robot to display">
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" mat-raised-button matTooltip="Choose file from the robot to display" matTooltipShowDelay="1000">
                     <i class="fas fa-file-upload fa-2x navbar-icons"></i>
                 </a>
             </div>
@@ -24,10 +24,10 @@
 
         <li class="nav-item d-none d-lg-block ml-2" >
             <div>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0" title="Export file to your device"> <!-- Hidden when no brushfile is choosed -->
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0" mat-raised-button matTooltip="Export file to your device" matTooltipShowDelay="1000"> <!-- Hidden when no brushfile is choosed -->
                     <i class="fas fa-file-download fa-2x navbar-icons"></i>
                 </a>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" title="Choose local file to display">
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#" mat-raised-button matTooltip="Choose local file to display" matTooltipShowDelay="1000">
                     <div class="fileupload">
                         <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
                     </div>
@@ -42,24 +42,24 @@
         </li>
 
         <!-- File upload/download setting small screen-->
-        <li class="nav-item d-lg-none" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+        <li class="nav-item d-lg-none" *ngIf="brushes.length>0" mat-raised-button matTooltip="Export file to robot" matTooltipShowDelay="1000" matTooltipPosition="right"> <!--  Hidden when no brushfile is choosed -->
             <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
                 <span >Robot: Export file</span> <!-- Text only when navbar is collapsed -->
             </a>
         </li>
-        <li class="nav-item d-lg-none">
+        <li class="nav-item d-lg-none" mat-raised-button matTooltip="Choose file from the robot to display" matTooltipShowDelay="1000" matTooltipPosition="right">
             <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
                 <span *ngIf="brushes.length<=0">Robot: Choose file</span> <!-- Text only when navbar is collapsed -->
                 <span *ngIf="brushes.length>0">Robot: Choose new file</span>
             </a>
         </li>
-        <li class="nav-item d-lg-none" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+        <li class="nav-item d-lg-none" *ngIf="brushes.length>0"  mat-raised-button matTooltip="Export file to your device" matTooltipShowDelay="1000" matTooltipPosition="right"> <!--  Hidden when no brushfile is choosed -->
             <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="saveFileAs()">
             <span class="d-lg-none">Local: Export file</span> <!-- Text only when navbar is collapsed -->
             </a>
         </li>
-        <li class="nav-item d-lg-none">
-            <a class="nav-link d-inline-block pt-0 pb-0" href="#" title="Choose local file to display">
+        <li class="nav-item d-lg-none" mat-raised-button matTooltip="Choose local file to display" matTooltipShowDelay="1000" matTooltipPosition="right">
+            <a class="nav-link d-inline-block pt-0 pb-0" href="#">
                 <div class="fileupload">
                     <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
                 </div>
@@ -75,13 +75,13 @@
 
         <!-- File info -->
         <li class="nav-item text-muted" *ngIf="brushes.length>0">
-            <a class="nav-link d-lg-none" href="#">
+            <a class="nav-link d-lg-none" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right">
                 <span (click)="toggleFileInfo()" data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Navbar collapsed: Text only --> 
             </a>
-            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" title="Show/hide file information"> <!-- Navbar expandes: Icon and text --> 
-                <i class="fas fa-info-circle fa-2x navbar-icons text-center d-block" (click)="toggleFileInfo()"></i>
-                <span class="h6 text-muted mt-1 mb-0 d-block">File info</span>
+            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000"> <!-- Navbar expandes: Icon and text --> 
+                <i class="fas fa-info-circle fa-2x navbar-icons text-center d-block" (click)="toggleFileInfo()"></i> 
             </a>
+            <span class="h6 text-muted mt-1 mb-0 d-none d-lg-block">File info</span>
         </li>
     
         <!-- Divider for collapsed navbar -->
@@ -89,13 +89,13 @@
     
         <!-- Settings -->
         <li class="nav-item text-muted" *ngIf="brushes.length>0">
-            <a class="nav-link d-lg-none" href="#">  <!-- Navbar collapsed: Text only --> 
+            <a class="nav-link d-lg-none" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right">  <!-- Navbar collapsed: Text only --> 
                 <span (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
             </a>
-            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" title="Show/hide brush editor settings menu"> <!-- Navbar expandes: Icon and text --> 
+            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#"  mat-raised-button matTooltip="Show/hide brush editor settings menu" matTooltipShowDelay="1000"> <!-- Navbar expandes: Icon and text --> 
                 <i class="fas fa-cog fa-2x navbar-icons text-center d-block" (click)="toggleSettings()"></i>
-                <span class="h6 text-muted mt-1 mb-0 d-block">Settings</span>
             </a>
+            <span class="h6 text-muted mt-1 mb-0 d-none d-lg-block">Settings</span>
         </li>
         </ul>
     </div>
