--- a/src/app/brush-info/brush-info.component.html
+++ b/src/app/brush-info/brush-info.component.html
@@ -1,5 +1,6 @@
 <div class="alert alert-secondary fade show" role="alert" *ngIf="showFileInfo">
-  <button type="button" class="close mb-3" aria-label="Close" (click)="toggleFileInfo()">
+  <button type="button" class="close mb-3" aria-label="Close" (click)="toggleFileInfo()"
+    mat-raised-button matTooltip="Close file information" matTooltipShowDelay="1000">
     <span aria-hidden="true">&times;</span>
   </button>
   <!-- If we want to be able to update file name and comment (https://angular.io/guide/forms)
