--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,5 +1,6 @@
 <div class="alert alert-secondary fade show mb-1 mt-1" role="alert" *ngIf="showSettings">
-    <button type="button" class="close mb-3" aria-label="Close" (click)="toggleSettings()">
+    <button type="button" class="close mb-3" aria-label="Close" (click)="toggleSettings()"
+        mat-raised-button matTooltip="Close settings" matTooltipShowDelay="1000">
         <span aria-hidden="true">&times;</span>
     </button>
     <div class="mb-1 mr-1 d-md-inline-block d-block">
@@ -8,11 +9,12 @@
                 <label for="maxChannelvalue">Max channel value</label>
                 <input type="number" class="form-control" id="maxChannelvalue" aria-describedby="maxChannelValue" placeholder=0 value="{{maxChannelValue}}" max="10000" min="1">
             </div>
-            <button type="button" class="btn btn-primary" (click)="updateSettings()" title="Update brush editor settings">
+            <button type="button" class="btn btn-primary" (click)="updateSettings()" 
+                mat-raised-button matTooltip="Update brush editor settings" matTooltipShowDelay="1000">
                 Update settings
             </button>
-            <button type="button" class="btn btn-secondary ml-1" (click)="resetSettings()" 
-                title="Reset all settings to default (channel names, max channel value etc... )">
+            <button type="button" class="btn btn-secondary ml-1" (click)="resetSettings()"
+                mat-raised-button matTooltip="Reset all settings to default (channel names, max channel value etc... )" matTooltipShowDelay="1000">
                 Reset all
             </button>
         </form>
