--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -100,3 +100,11 @@
         </ul>
     </div>
 </nav>
+<div>
+    <h1>API-testing</h1>
+    <button id="http-request">
+        Make request
+    </button>
+    <p id="result"></p>
+    <p id="data"></p>
+</div>
