--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,14 @@
   </div>
 </div>
 
-<div class="container-fluid"> 
+<div class="container-fluid">
+  <!-- Choose file from robot -->
+  <div class="row mt-3">
+    <div class="col-12">
+      <app-choose-file-robot id="app-choose-file-robot"></app-choose-file-robot>
+    </div>
+  </div>
+
   <!-- Info messages -->
   <div class="row mt-3">
     <div class="col-12">
