--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -105,10 +105,12 @@
     <button type="button" id="http-request" class="btn btn-primary" (click)="httpRequestNoDigest()">
         Make request (npm)
     </button>
-    <br>
-    <button type="button" class="btn btn-primary" (click)="myTestClick()">
-        Make request (local)
+    <br><br>
+    <button type="button" class="btn btn-primary" (click)="httpRequestWithDigest()">
+        Make request with Digest
     </button>
-    <p id="result"></p>
-    <p id="data"></p>
 </div>
+
+<h1>DigestAuthRequest.js test</h1>
+<p id="result">Requesting...</p>
+<p id="data"></p>
