Adde custom.js and digestAuth.js
App will not compile without these files

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -100,17 +100,13 @@
         </ul>
     </div>
 </nav>
-<div class="ml-2">
-    <h1>API-testing</h1>
-    <button type="button" id="http-request" class="btn btn-primary" (click)="httpRequestNoDigest()">
-        Make request (npm)
-    </button>
-    <br><br>
+<!--
+<div class="ml-2 mt-2">
     <button type="button" class="btn btn-primary" (click)="httpRequestWithDigest()">
         Make request with Digest
     </button>
+    <p id="result">Requesting...</p>
+    <p id="data"></p>
 </div>
+-->
 
-<h1>DigestAuthRequest.js test</h1>
-<p id="result">Requesting...</p>
-<p id="data"></p>
