Navigating back and forward in folders now implemented:)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
 
 <!-- If no brushfile is choosed -->
 <div class="container mt-5 text-center" *ngIf="brushes.length<=0">
-  <h3>Please choose a file in the menu</h3>
+  <h3>Please choose a file to show</h3>
 </div>
 
 <section>
