Started with file export to robot implementation. Not done yet

--- a/src/app/brush-info/brush-info.component.html
+++ b/src/app/brush-info/brush-info.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-secondary fade show" role="alert" *ngIf="showFileInfo">
+<div class="alert alert-secondary fade show" role="alert">
   <button type="button" class="close mb-3" aria-label="Close" (click)="toggleFileInfo()"
     mat-raised-button matTooltip="Close file information" matTooltipShowDelay="1000">
     <span aria-hidden="true">&times;</span>
