--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-secondary fade show mb-1 mt-1" role="alert" *ngIf="showSettings">
+<div class="alert alert-secondary fade show mb-1 mt-1" role="alert">
     <button type="button" class="close mb-3" aria-label="Close" (click)="toggleSettings()"
         mat-raised-button matTooltip="Close settings" matTooltipShowDelay="1000">
         <span aria-hidden="true">&times;</span>
