--- a/src/app/choose-file-robot/choose-file-robot.component.scss
+++ b/src/app/choose-file-robot/choose-file-robot.component.scss
@@ -6,9 +6,12 @@
     background-color: rgba(0,0,0,.2);
     cursor: pointer;
 }
-i {
+i, #currentPath {
     color: black;
 }
 i.disabled {
     color: #6c757d;
+}
+.pagination {
+    font-size: 1.15em;
 }
