--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,21 +14,21 @@
   </div>
 
   <!-- Info messages -->
-  <div class="row mt-3">
+  <div class="row mt-3" *ngIf="showError || showSuccess">
     <div class="col-12">
       <app-info-msg id="app-info"></app-info-msg>
     </div>
   </div>
 
   <!-- Settings -->
-  <div class="row mt-3">
+  <div class="row mt-3"  *ngIf="showSettings">
     <div class="col-12">
       <app-brush-settings id="app-settings"></app-brush-settings>
     </div>
   </div>
 
   <!-- File info -->
-  <div class="row mt-3">
+  <div class="row mt-3" *ngIf="showFileInfo">
     <div class="col-12">
       <app-brush-info id="app-info"></app-brush-info>
     </div>
