--- a/src/app/choose-file-robot/choose-file-robot.component.html
+++ b/src/app/choose-file-robot/choose-file-robot.component.html
@@ -3,14 +3,20 @@
     mat-raised-button matTooltip="Close file chooser" matTooltipShowDelay="1000">
     <span aria-hidden="true">&times;</span>
     </button>
-    <nav aria-label="Page navigation example">
+    <nav>
         <ul class="pagination">
-        <li [class.disabled]="!backEnabled" class="page-item">
-            <a class="page-link" href="#" aria-label="Previous" (click)="back()">
-            <i [class.disabled]="!backEnabled" class="fas fa-long-arrow-alt-left"></i>
-            </a>
-        </li>
-        <li class="page-item disabled"><a class="page-link" href="#" id="currentPath">{{currentUrlView}}</a></li> 
+            <li [class.disabled]="!backEnabled" class="page-item">
+                <a class="page-link" href="#" aria-label="Previous" (click)="back()">
+                <i [class.disabled]="!backEnabled" class="fas fa-long-arrow-alt-left"></i>
+                </a>
+            </li>
+            <li class="page-item disabled">
+                <a class="page-link path" href="#" id="currentPath">{{currentUrlView}}</a>
+            </li> 
+            <li *ngIf="brushes.length>0" class="page-item" (click)= "exportFile()"
+                mat-raised-button matTooltip="Export this file to robot" matTooltipShowDelay="1000" matTooltipPosition="right">
+                <a class="page-link" href="#"><i class="fas fa-upload"></i></a>
+            </li>
         </ul>
     </nav>
     <p *ngFor="let dir of navDirectories" class="menuElement rounded p-0 pt-2 pb-2 m-0" (click)="moveIntoDirectory(dir)">
