--- a/src/app/choose-file-robot/choose-file-robot.component.html
+++ b/src/app/choose-file-robot/choose-file-robot.component.html
@@ -14,7 +14,7 @@
                 <a class="page-link path" href="#" id="currentPath">{{currentUrlView}}</a>
             </li> 
             <li *ngIf="brushes.length>0" class="page-item" (click)= "exportFile()"
-                mat-raised-button matTooltip="Export this file to robot" matTooltipShowDelay="1000" matTooltipPosition="right">
+                mat-raised-button matTooltip="Export current file to this folder" matTooltipShowDelay="1000" matTooltipPosition="right">
                 <a class="page-link" href="#"><i class="fas fa-upload"></i></a>
             </li>
         </ul>
