--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -89,7 +89,7 @@
               </td>
   
               <td class="clearField align-middle">
-                <button mat-raised-button matTooltip="Clear content of row" matTooltipPosition="right" id="btnClear" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)" (focus)="markRow(brush.brushId)">
+                <button mat-raised-button matTooltip="Clear content of row" matTooltipPosition="right" matTooltipClass="primary-tooltip" id="btnClear" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)" (focus)="markRow(brush.brushId)">
                   <i class="fas fa-times fa-2x"></i>
                 </button>
               </td>
