--- a/src/app/info-msg/info-msg.component.html
+++ b/src/app/info-msg/info-msg.component.html
@@ -1,13 +1,13 @@
 <div class="alert alert-danger fade show mt-1 mb-1" role="alert" *ngIf="showError">
     <button type="button" class="close" (click)="closeError()"
-        mat-raised-button matTooltip="Close error message" matTooltipShowDelay="1000">
+        mat-raised-button matTooltip="Close error message" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
         <span aria-hidden="true">&times;</span>
     </button>
     {{infoMsg || 'Undefined error'}}
 </div>
 <div class="alert alert-success fade show mt-1 mb-1" role="alert" *ngIf="showSuccess">
     <button type="button" class="close" (click)="closeSuccess()"
-        mat-raised-button matTooltip="Close message" matTooltipShowDelay="1000">
+        mat-raised-button matTooltip="Close message" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
         <span aria-hidden="true">&times;</span>
     </button>
     {{infoMsg || 'Undefined success'}}
