--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,6 +1,9 @@
 <div *ngIf="brushes.length>0"> <!-- Show table and graph only if a file has been uploaded -->
   <div id="tableContainer">
     <h3>Data</h3>
+    <div *ngIf="inputError" class="fakeTooltip alert alert-danger">
+        Maximum input value is {{maxChannelValue}}!
+    </div>
   <div>
     <div class="table-responsive">
       <table class="table table-hover">
@@ -32,7 +35,8 @@
                 [(ngModel)]="brush.ch1"
                 (keypress)="inputValidation(brush.brushId, 'ch1')"
                 (keyup)="updateBrushes(brush.brushId, 'ch1'); inputValidation(brush.brushId, 'ch1')" 
-                (focus)="markRow(brush.brushId)">
+                (focus)="markRow(brush.brushId)" 
+                (blur)="inputError=false">
               </td>
   
               <td *ngIf="brush.ch2>=0"><input 
@@ -43,7 +47,8 @@
                 [(ngModel)]="brush.ch2"
                 (keypress)="inputValidation(brush.brushId, 'ch2')"
                 (keyup)="updateBrushes(brush.brushId, 'ch2'); inputValidation(brush.brushId, 'ch2')" 
-                (focus)="markRow(brush.brushId)">
+                (focus)="markRow(brush.brushId)"
+                (blur)="inputError=false">
               </td>
   
               <td *ngIf="brush.ch3>=0"><input 
@@ -54,7 +59,8 @@
                 [(ngModel)]="brush.ch3"
                 (keypress)="inputValidation(brush.brushId, 'ch3')"
                 (keyup)="updateBrushes(brush.brushId, 'ch3'); inputValidation(brush.brushId, 'ch3')" 
-                (focus)="markRow(brush.brushId)">
+                (focus)="markRow(brush.brushId)"
+                (blur)="inputError=false">
               </td>
   
               <td *ngIf="brush.ch4>=0"><input 
@@ -65,7 +71,8 @@
                 [(ngModel)]="brush.ch4"
                 (keypress)="inputValidation(brush.brushId, 'ch4')"
                 (keyup)="updateBrushes(brush.brushId, 'ch4'); inputValidation(brush.brushId, 'ch4')" 
-                (focus)="markRow(brush.brushId)">
+                (focus)="markRow(brush.brushId)"
+                (blur)="inputError=false">
               </td>
   
               <td *ngIf="brush.ch5>=0"><input 
@@ -76,7 +83,8 @@
                 [(ngModel)]="brush.ch5"
                 (keypress)="inputValidation(brush.brushId, 'ch5')"
                 (keyup)="updateBrushes(brush.brushId, 'ch5'); inputValidation(brush.brushId, 'ch5')" 
-                (focus)="markRow(brush.brushId)">
+                (focus)="markRow(brush.brushId)"
+                (blur)="inputError=false">
               </td>
   
               <td><input 
@@ -87,11 +95,10 @@
                 (keyup)="updateBrushes(brush.brushId, 'desc')"
                 (focus)="markRow(brush.brushId)">
               </td>
-  
               <td class="clearField align-middle">
                 <button mat-raised-button matTooltip="Clear content of row" matTooltipPosition="right" matTooltipClass="primary-tooltip" id="btnClear" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)" (focus)="markRow(brush.brushId)">
                   <i class="fas fa-times fa-2x"></i>
-                </button>
+                </button> 
               </td>
             </tr>
         </tbody>
@@ -109,7 +116,7 @@
         </li>-->
         <li [ngClass]="{disabled:pager.currentPage === 1}" class="page-item">
             <a (click)="setPage(pager.currentPage - 1)" class="page-link">
-                <span aria-hidden="true">&laquo;</span>
+                <span aria-hidden="true"><i class="fas fa-long-arrow-alt-left"></i></span>
                 <span class="sr-only">Previous</span>
             </a>
         </li>
@@ -118,7 +125,7 @@
         </li>
         <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}" class="page-item">
             <a (click)="setPage(pager.currentPage + 1)" class="page-link">
-                <span aria-hidden="true">&raquo;</span>
+                <span aria-hidden="true"><i class="fas fa-long-arrow-alt-right"></i></span>
                 <span class="sr-only">Next</span>
             </a>
         </li>
