--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -13,6 +13,9 @@
                 mat-raised-button matTooltip="Update brush editor settings" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
                 Update settings
             </button>
+            <button (click)="adjustBrushToMaxvalue()" class="btn btn-primary ml-1" mat-raised-button matTooltip="Brush is adjusted to fit your max value">
+                Implement max value to brush
+            </button>
             <button type="button" class="btn btn-secondary ml-1" (click)="resetSettings()"
                 mat-raised-button matTooltip="Reset all settings to default (channel names, max channel value, etc.)" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
                 Reset all
