Fixed error msg and changed its text

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -2,7 +2,7 @@
   <div id="tableContainer">
     <h3>Data</h3>
     <div *ngIf="inputError" class="fakeTooltip alert alert-danger">
-        Maximum input value is {{maxChannelValue}}!
+        Maximum input value is {{maxChannelValue}}! You can change this value in settings
     </div>
   <div>
     <div class="table-responsive">
