Insane refresh of UI

--- a/src/app/brush-table/brush-table.component.scss
+++ b/src/app/brush-table/brush-table.component.scss
@@ -7,7 +7,10 @@ table input {
     min-width: 6em;
 }
 th, td {
-    padding: 0.2em;
+    padding-top: 0.1em;
+    padding-bottom: 0.2em;
+    padding-left: 0.4em;
+    padding-right: 0.4em;
     max-width: 6em;
 }
 th input {
@@ -46,20 +49,12 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active  {
     transition: background-color 5000s ease-in-out 0s;
 }
-.hiddentooltip {
-    display: inline-block;
-    position: absolute;
-    visibility: hidden; 
-    left: 0;
-    width: 0;
-    top: 3em;
-}
-.fakeTooltip{
-    border-radius: 0.25em;
+.custom-tooltip {
+    border-radius: 0;
     padding:0.75em;
     z-index:2;
     position: absolute;
-    left: 10em;
-    top: -0.2em;
+    left: 15em;
+    top: 1em;
     font-size: 12px;
   }
