--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,5 +1,8 @@
 .navbar-icons {
-    font-size: 38px; /* Height */   
+    font-size: 34px; /* Height */
+}
+.navbar-icons-2 {
+    font-size: 36px; /* Height */
 }
 .navbar-buttons {
     margin: 0;
@@ -24,4 +27,4 @@
 }
 /deep/ .mat-tooltip {
     font-size: 10px;
-  }
+}
