--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
   <!-- Choose file from robot -->
-  <div class="row mt-3">
+  <div class="row mt-3" *ngIf="showFileChooser">
     <div class="col-12">
       <app-choose-file-robot id="app-choose-file-robot"></app-choose-file-robot>
     </div>
@@ -34,14 +34,14 @@
     </div>
   </div>
 
-  <div class="row mt-3">
+  <div class="row align-items-center mb-2">
     <!-- Table -->
-    <div class="col-12 col-sm-12 col-lg-8">
+    <div class="col-12 col-sm-12 col-lg-8 mt-3">
       <app-brush-table id="app-table"></app-brush-table>
     </div>
 
     <!-- Graph -->
-    <div class="col-12 col-sm-12 col-lg-4">
+    <div class="col-12 col-sm-12 col-lg-4 mt-3">
       <app-brush-graph id="app-graph"></app-brush-graph>
     </div>
   </div>
