--- a/src/app/brush-info/brush-info.component.html
+++ b/src/app/brush-info/brush-info.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-secondary fade show" role="alert">
+<div class="alert alert-primary fade show rounded-0 mt-0 mb-0" role="alert">
   <button type="button" class="close mb-3" aria-label="Close" (click)="toggleFileInfo()"
     mat-raised-button matTooltip="Close file information" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
     <span aria-hidden="true">&times;</span>
@@ -20,6 +20,6 @@
     <input type="button" class="btn btn-primary" (click)="saveFileInfo()" value="Save file info" disabled>
   </form>-->
   <h5>File info</h5>
-  <p>Name: "<i>{{fileName}}</i>"</p>
-  <p>Comment: "<i>{{fileComment}}</i>"</p>
+  <p>Name: <i>{{fileName}}</i></p>
+  <p>Comment: <i>{{fileComment}}</i></p>
 </div>
