--- a/src/app/choose-file-robot/choose-file-robot.component.html
+++ b/src/app/choose-file-robot/choose-file-robot.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showFileChooser" class="alert alert-secondary fade show" role="alert">
+<div *ngIf="showFileChooser" class="alert alert-primary fade show rounded-0 mt-0 mb-0" role="alert">
     <button type="button" class="close mb-3" aria-label="Close" (click)="toggleFileChooser()"
     mat-raised-button matTooltip="Close file chooser" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
     <span aria-hidden="true">&times;</span>
@@ -6,29 +6,29 @@
     <nav>
         <ul class="pagination">
             <li [class.disabled]="!backEnabled" class="page-item">
-                <a class="page-link" href="#" aria-label="Previous" (click)="back()">
+                <a class="page-link rounded-0" href="#" aria-label="Previous" (click)="back()">
                 <i [class.disabled]="!backEnabled" class="fas fa-long-arrow-alt-left"></i>
                 </a>
             </li>
             <li class="page-item disabled">
-                <a class="page-link path" href="#" id="currentPath">{{currentUrlView}}</a>
+                <a class="page-link path rounded-0" href="#" id="currentPath">{{currentUrlView}}</a>
             </li> 
             <li *ngIf="brushes.length>0" class="page-item" (click)= "exportFile()"
                 mat-raised-button matTooltip="Export current file to this folder" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
-                <a class="page-link" href="#"><i class="fas fa-upload"></i></a>
+                <a class="page-link rounded-0" href="#"><i class="fas fa-upload"></i></a>
             </li>
             <!--
             <li *ngIf="brushes.length>0" class="page-item disabled" (click)= "duplicateFile()"
                 mat-raised-button matTooltip="Duplicate current file" matTooltipShowDelay="1000" matTooltipPosition="right">
-                <a class="page-link" href="#"><i class="fas fa-copy disabled"></i></a>
+                <a class="page-link rounded-0" href="#"><i class="fas fa-copy disabled"></i></a>
             </li>
             <li class="page-item disabled" (click)= "createNewFile()"
                 mat-raised-button matTooltip="Create new empty file" matTooltipShowDelay="1000" matTooltipPosition="right">
-                <a class="page-link" href="#"><i class="fas fa-file disabled"></i></a>
+                <a class="page-link rounded-0" href="#"><i class="fas fa-file disabled"></i></a>
             </li>
             <li class="page-item disabled" (click)= "createNewFolder()"
                 mat-raised-button matTooltip="Create new folder in this directory" matTooltipShowDelay="1000" matTooltipPosition="right">
-                <a class="page-link" href="#"><i class="fas fa-folder-plus disabled"></i></a>
+                <a class="page-link rounded-0" href="#"><i class="fas fa-folder-plus disabled"></i></a>
             </li>
             -->
         </ul>
