--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,101 +1,92 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <span class="navbar-brand mb-0 pt-0 h1 text-muted"><img src="..\..\assets\img\paint-brush.svg" height="45px" class="mr-3">Brush Editor</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <span class="navbar-brand mb-0 pt-0 h1 text-white">
+        <!-- Icon made by Freepik from www.flaticon.com. Licensed by CC 3.0 BY</a> -->
+        <img src="..\..\assets\img\paintbrush.svg" height="40px" class="mr-3">
+        Brush Editor
+    </span>
+    <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars text-white"></i>
     </button>
     
-    <div class="collapse show navbar-collapse mr-3 mt-2" id="navbarNav">
+    <div class="collapse show navbar-collapse mt-2" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-    
-        <!-- File upload/download setting large screen-->
-        <li class="nav-item d-none d-lg-block ml-2" > 
-            <div>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="openFileChooser()" mat-raised-button matTooltip="Open robot file chooser" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
-                    <i class="fas fa-folder-open fa-2x navbar-icons"></i>
-                </a>
-            </div>
-            <div class="text-center mt-1">
-                <p class="h6 text-muted">Robot</p>
-            </div>
-        </li>
+            <!-- File upload/download setting large screen-->
+            <li class="nav-item d-none d-lg-block ml-2"> 
+                <div>
+                    <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="openFileChooser()" mat-raised-button matTooltip="Open robot file chooser" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
+                        <i class="fas fa-folder-open navbar-icons text-white"></i>
+                    </a>
+                </div>
+                <div class="m-0 p-0">
+                    <p class="h6 text-center text-white mt-1 mb-1">Robot</p>
+                </div>
+            </li>
 
-        <li class="nav-item d-none d-lg-block ml-2" >
-            <div>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0" mat-raised-button matTooltip="Export file to your device" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Hidden when no brushfile is choosed -->
-                    <i class="fas fa-file-download fa-2x navbar-icons"></i>
+            <li class="nav-item d-none d-lg-block ml-2" >
+                <div>
+                    <a class="nav-link d-inline-block pt-0 pb-0" href="#" (click)="saveFileAs()" *ngIf="brushes.length>0" mat-raised-button matTooltip="Export file to your device" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Hidden when no brushfile is choosed -->
+                        <i class="fas fa-file-download navbar-icons text-white"></i>
+                    </a>
+                    <a class="nav-link d-inline-block pt-0 pb-0" href="#" mat-raised-button matTooltip="Open local file chooser" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
+                        <div class="fileupload">
+                            <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
+                        </div>
+                        <label for="theFile" class="chooseFileLabel">
+                            <i class="fas fa-file-upload navbar-icons text-white"></i>
+                        </label>
+                    </a>
+                </div>
+                <div class="m-0 p-0">
+                    <p class="h6 text-center text-white mt-1 mb-1">Local</p>
+                </div>  
+            </li>
+
+            <!-- File upload/download setting small screen-->
+            <li class="nav-item d-lg-none" (click)="openFileChooser()" mat-raised-button matTooltip="Choose file from the robot to display" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
+                <a class="nav-link text-white" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+                Robot: Open File explorer
                 </a>
-                <a class="nav-link d-inline-block pt-0 pb-0" href="#" mat-raised-button matTooltip="Open local file chooser" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
+            </li>
+
+            <li class="nav-item d-lg-none" (click)="saveFileAs()" *ngIf="brushes.length>0"  mat-raised-button matTooltip="Export file to your device" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip"> <!--  Hidden when no brushfile is choosed -->
+                <a class="nav-link text-white" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+                Local: Export file
+                </a>
+            </li>
+
+            <li class="nav-item d-lg-none pt-1 pb-1" mat-raised-button matTooltip="Choose local file to display" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
+                <a class="nav-link d-inline-block pt-0 pb-0" href="#">
                     <div class="fileupload">
                         <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
                     </div>
-                    <label for="theFile" class="chooseFileLabel">
-                        <i class="fas fa-file-upload fa-2x navbar-icons"></i>
+                    <label for="theFile" class="chooseFileLabel pt-1 pb-1 text-white">
+                        <span *ngIf="brushes.length<=0">Local: Choose file</span>
+                        <span *ngIf="brushes.length>0">Local: Choose new file</span>
                     </label>
                 </a>
-            </div>
-            <div class="text-center mt-1">
-                <p class="h6 text-muted">Local</p>
-            </div>  
-        </li>
+            </li>
 
-        <!-- File upload/download setting small screen-->
-        <li class="nav-item d-lg-none" (click)="openFileChooser()" mat-raised-button matTooltip="Choose file from the robot to display" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
-            <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
-            Robot: Open File explorer
-            </a>
-        </li>
-
-        <!-- Divider for collapsed navbar -->
-        <li class="dropdown-divider d-lg-none pb-0 pt-0 mb-0 mt-0"></li>
-
-        <li class="nav-item d-lg-none" (click)="saveFileAs()" *ngIf="brushes.length>0"  mat-raised-button matTooltip="Export file to your device" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip"> <!--  Hidden when no brushfile is choosed -->
-            <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
-            Local: Export file
-            </a>
-        </li>
-
-        <!-- Divider for collapsed navbar -->
-        <li class="dropdown-divider d-lg-none pb-0 pt-0 mb-0 mt-0" *ngIf="brushes.length>0"></li>
-
-        <li class="nav-item d-lg-none pt-1 pb-1" mat-raised-button matTooltip="Choose local file to display" matTooltipShowDelay="1000" matTooltipPosition="right">
-            <a class="nav-link d-inline-block pt-0 pb-0" href="#">
-                <div class="fileupload">
-                    <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
-                </div>
-                <label for="theFile" class="chooseFileLabel pt-1 pb-1">
-                    <span *ngIf="brushes.length<=0">Local: Choose file</span>
-                    <span *ngIf="brushes.length>0">Local: Choose new file</span>
-                </label>
-            </a>
-        </li>
-    
-        <!-- Divider for collapsed navbar -->
-        <li class="dropdown-divider d-lg-none pb-0 pt-0 mb-0 mt-0" *ngIf="brushes.length>0"></li>
-
-        <!-- File info -->
-        <li class="nav-item text-muted" *ngIf="brushes.length>0" (click)="toggleFileInfo()">
-            <a class="nav-link d-lg-none" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
-                <span data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Navbar collapsed: Text only --> 
-            </a>
-            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Navbar expandes: Icon and text --> 
-                <i class="fas fa-info-circle fa-2x navbar-icons text-center d-block"></i> 
-            </a>
-            <span class="h6 text-muted mt-1 mb-0 d-none d-lg-block">File info</span>
-        </li>
-    
-        <!-- Divider for collapsed navbar -->
-        <li class="dropdown-divider d-lg-none pb-0 pt-0 mb-0 mt-0" *ngIf="brushes.length>0"></li>
-    
-        <!-- Settings -->
-        <li class="nav-item text-muted" *ngIf="brushes.length>0" (click)="toggleSettings()">
-            <a class="nav-link d-lg-none" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">  <!-- Navbar collapsed: Text only --> 
-                <span (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
-            </a>
-            <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#"  mat-raised-button matTooltip="Show/hide brush editor settings menu" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Navbar expandes: Icon and text --> 
-                <i class="fas fa-cog fa-2x navbar-icons text-center d-block" ></i>
-            </a>
-            <span class="h6 text-muted mt-1 mb-0 d-none d-lg-block">Settings</span>
-        </li>
+            <!-- File info -->
+            <li class="nav-item" *ngIf="brushes.length>0" (click)="toggleFileInfo()">
+                <a class="nav-link d-lg-none text-white" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
+                    <span data-toggle="collapse" data-target=".navbar-collapse.show">File info</span> <!-- Navbar collapsed: Text only --> 
+                </a>
+                <a class="nav-link pt-0 pb-0 d-none d-lg-block ml-2" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Navbar expandes: Icon and text --> 
+                    <i class="fas fa-info-circle navbar-icons-2 text-center d-block text-white"></i> 
+                </a>
+                <span class="h6 text-white mt-1 mb-1 d-none d-lg-block text-white ml-2">File info</span>
+            </li>
+        
+            <!-- Settings -->
+            <li class="nav-item" *ngIf="brushes.length>0" (click)="toggleSettings()">
+                <a class="nav-link d-lg-none text-white" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">  <!-- Navbar collapsed: Text only --> 
+                    <span data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
+                </a>
+                <a class="nav-link pt-0 pb-0 d-none d-lg-block text-white ml-2" href="#"  mat-raised-button matTooltip="Show/hide brush editor settings menu" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Navbar expandes: Icon and text --> 
+                    <i class="fas fa-cog navbar-icons-2 text-center d-block text-white"></i>
+                </a>
+                <span class="h6 text-white mt-1 mb-1 d-none d-lg-block text-white ml-2">Settings</span>
+            </li>
         </ul>
     </div>
 </nav>
