--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -4,7 +4,7 @@
         <span aria-hidden="true">&times;</span>
     </button>
     <h5>Settings</h5>
-    <div class="mb-1 mr-1 d-md-inline-block d-block">
+    <div class="mr-1 d-md-inline-block d-block">
         <form id="allSettings">
             <div class="form-group">
                 <label for="maxChannelvalue">Max channel value</label>
@@ -22,8 +22,8 @@
         <div id="confirmation" hidden>
             <p>Your max channel value is set to: <span style="font-weight:bold">{{maxChannelValue}}</span>!</p>
             <p>Do you want all values in the table that are greater than <span style="font-weight:bold">{{maxChannelValue}}</span> to be changed to <span style="font-weight:bold">{{maxChannelValue}}</span>?</p>
-            <button id="yes" (click)="adjustBrushToMaxvalue()" class="btn btn-primary ml-1 rounded-0">Yes</button>
-            <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1 rounded-0">No, let them stay like this</button>
+            <button id="yes" (click)="adjustBrushToMaxvalue()" class="btn btn-primary rounded-0">Yes</button>
+            <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1 rounded-0">No, let them stay like they are</button>
         </div>
     </div>
 
