Close settings fix

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -89,7 +89,7 @@
         <!-- Settings -->
         <li class="nav-item text-muted" *ngIf="brushes.length>0" (click)="toggleSettings()">
             <a class="nav-link d-lg-none" href="#" mat-raised-button matTooltip="Show/hide file information" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">  <!-- Navbar collapsed: Text only --> 
-                <span (click)="toggleSettings()" data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
+                <span data-toggle="collapse" data-target=".navbar-collapse.show">Settings</span>
             </a>
             <a class="nav-link pt-0 pb-0 ml-2 d-none d-lg-block" href="#"  mat-raised-button matTooltip="Show/hide brush editor settings menu" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"> <!-- Navbar expandes: Icon and text --> 
                 <i class="fas fa-cog fa-2x navbar-icons text-center d-block" ></i>
