--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -91,7 +91,7 @@
     </div>
 </nav>
 
-<div class="alert alert-secondary fade show" role="alert" id="userDecision" hidden>
+<div class="alert alert-secondary fade show ml-3 mr-3 mt-3 rounded-0" role="alert" id="userDecision" style="margin-bottom:0" hidden>
     <button type="button" class="close mb-3" aria-label="Close" (click)="hideConfirmation()"
     mat-raised-button matTooltip="Close" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
     <span aria-hidden="true">&times;</span>
